fixed score board visibility

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,7 @@ body {
   left: 15px;
   top: 15px;
   padding: 10px;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .score-item-wrapper {
@@ -60,6 +61,11 @@ body {
 
 .score-item {
   margin-bottom: 0.5em;
+  font-size: 18px;
+}
+
+.score-item-actual {
+  font-size: 20px;
 }
 
 .camera-wrapper {
